[package]
name = "contract-callback"
version = "0.1.0"
authors = ["Aries Thio <aries.thio@hotmail.com>"]
edition = "2021"
resolver = "2"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "deploy"
required-features = ["daemon"]

[[example]]
name = "interact"
required-features = ["daemon"]

[features]
default = ["export"]
export = []
interface = ["export"]
daemon = ["interface", "cw-orch/daemon"]

# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm \
  -e CARGO_TERM_COLOR=always \
  -v "$(pwd)":/code \
  -v "$(basename "$(pwd)")_cache":/code/target \
  -v "$(basename "$(pwd)")_registry_cache":/usr/local/cargo/registry \
  -v "$(basename "$(pwd)")_cosmwasm_sccache":/root/.cache/sccache \
  --name "$(basename "$(pwd)")" \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
# archway-bindings = "0.2.1"
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", default-features = false, features=["stargate", "cosmwasm_1_4"]}
cosmwasm-storage = "1.3.1"
cw-orch = { version = "0.22.2"}
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
cw-utils = "1.0.3"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.21"
prost = "0.12.6"
prost-types = { version = "0.12.6" }
cosmos-sdk-proto = { version = "0.20.0", default-features = false}

archid-registry = { version = "1.0.3", features = ["library"] }
cw721-archid = { version = "1.0.3", features = ["library"] }
cw721 = "0.18.0"
cw721-updatable = "1.0.5"
archid-token = "1.0.3"
cw721-base = { version = "0.18.0", features = ["library"] }

[dev-dependencies]
dotenv = { version = "0.15.0" }
speculoos = "0.11.0"
semver = "1.0"
env_logger = "0.10.0"
cw-orch = { version = "0.22.2", features = ["daemon"]}
clap = { version = "4.3.7", features = ["derive"] }

# Testing cw20
cw20-base = "0.16.0"
cw20 = "0.16.0"
anyhow = "1.0.86"
